tests/fixtures/invalid/dict_bitor_int.py
# Cannot use | between dict and Int
x: dict[int, int] = {1: 2} | 3
